<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarHeight"
        android:background="@color/myActionBar">
        <TextView
            android:id="@+id/courseDetailsName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/course_time"
            android:layout_marginLeft="@dimen/actionBarMargin"
            android:textSize="@dimen/actionFontSize"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/courseHeight"
        android:layout_margin="@dimen/courseMargin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="@dimen/detailTitleFontSize"
            android:textColor="@color/myActionBar"
            android:text="@string/courseDetailText"/>
        <View
            android:layout_height="2px"
            android:layout_width="fill_parent"

            android:background="#66CCFF"
            />
    </LinearLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/courseMargin"
        android:layout_marginEnd="@dimen/courseMargin"
        android:rowCount="6"
        android:columnCount="2">


        <TextView
            android:id="@+id/textView8"
            android:layout_marginBottom="@dimen/detailItemBottomMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detailFontSize"
            android:text="@string/courseNameText" />

        <TextView
            android:id="@+id/courseDetailsName1"
            android:layout_marginLeft="@dimen/detailItemLeftMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />

        <TextView
            android:id="@+id/textView9"
            android:layout_marginBottom="@dimen/detailItemBottomMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseAddrText" />

        <TextView
            android:id="@+id/courseDetailsAddr"
            android:layout_marginLeft="@dimen/detailItemLeftMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/textView10"
            android:layout_marginBottom="@dimen/detailItemBottomMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseTeacText" />

        <TextView
            android:id="@+id/courseDetailsTeacher"
            android:layout_marginLeft="@dimen/detailItemLeftMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/textView11"
            android:layout_marginBottom="@dimen/detailItemBottomMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseTimeText" />

        <TextView
            android:id="@+id/courseDetailsCount"
            android:layout_marginLeft="@dimen/detailItemLeftMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/textView12"
            android:layout_marginBottom="@dimen/detailItemBottomMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseWeekText" />

        <TextView
            android:id="@+id/courseDetailsWeek"
            android:layout_marginLeft="@dimen/detailItemLeftMargin"
            android:textSize="@dimen/detailFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </GridLayout>

    <Button
        android:id="@+id/quitDetailsWeek"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/navBtMarginBottom"
        android:layout_marginStart="@dimen/bigBtnMargin"
        android:layout_marginEnd="@dimen/bigBtnMargin"
        android:layout_height="@dimen/navBtHeight"
        android:background="@drawable/button_color"
        android:text="@string/rtnBack" />

</LinearLayout>