<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarHeight"
        android:background="@color/myActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/actionBarMargin"
            android:gravity="center_vertical"
            android:text="@string/course_time"
            android:textSize="@dimen/actionFontSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timeSetHeight"
        android:layout_margin="@dimen/timeSetMargin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="时间设置"
            android:textColor="@color/myActionBar"
            android:textSize="@dimen/timeTitleFontSize" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"

            android:background="#66CCFF" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/timeSetMargin"
        android:layout_marginEnd="@dimen/timeSetMargin"
        android:columnCount="2"
        android:rowCount="7">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/timeSetBottomMargin"
            android:text="@string/cTime12"
            android:textSize="@dimen/timeFontSize"
            android:layout_column="0" />

        <TextView
            android:id="@+id/time12Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timeSetLeftMargin"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/timeSetBottomMargin"
            android:text="@string/cTime34"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/time34Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timeSetLeftMargin"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/timeSetBottomMargin"
            android:text="@string/cTime56"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/time56Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timeSetLeftMargin"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/timeSetBottomMargin"
            android:text="@string/cTime78"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/time78Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timeSetLeftMargin"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/timeSetBottomMargin"
            android:text="@string/cTime910"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/time910Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timeSetLeftMargin"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/timeSetBottomMargin"
            android:text="@string/cTime1112"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/time1112Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timeSetLeftMargin"
            android:textSize="@dimen/timeFontSize" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/timeSetBottomMargin"
            android:text="@string/callTime"
            android:textSize="@dimen/timeFontSize" />

        <Spinner
            android:id="@+id/selectAlarmCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/timeSetLeftMargin"

            android:entries="@array/spinnerCount"
            android:textAlignment="center"
            android:textSize="@dimen/timeFontSize">

        </Spinner>


    </GridLayout>


    <Button
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/navBtMarginBottom"
        android:layout_height="@dimen/navBtHeight"
        android:background="@drawable/button_color"
        android:text="@string/rtnBack" />

</LinearLayout>